--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,9 +21,9 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: docker-gh
-          environment_name: Dockergh-env
-          existing_bucket_name: elasticbeanstalk-us-east-1-923445559289
-          region: us-east-1
+          application_name: docker-react
+          environment_name: Docker-env
+          existing_bucket_name: elasticbeanstalk-eu-central-1-651303516865
+          region: eu-central-1
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
